--- a/src/client/stylesheets/partials/_tables.scss
+++ b/src/client/stylesheets/partials/_tables.scss
@@ -7,6 +7,7 @@
   }
   td, th{
     padding: 12px;
+    vertical-align: middle;
     text-align: left;
     border-bottom: 1px solid darken($gray, 10%);
   }
