--- a/src/client/stylesheets/partials/_figures.scss
+++ b/src/client/stylesheets/partials/_figures.scss
@@ -11,8 +11,8 @@ body{
   padding: 50px;
   .modal-body{
     background-color: white;
-    max-width: 500;
-    min-width: 300;
+    max-width: 500px;
+    min-width: 300px;
     margin: 0 auto;
     padding: 30px;
   }
@@ -50,4 +50,22 @@ body{
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.accordian{
+  background-color:#f5f5f5;
+  transition: 0.4s;
+  color: black !important;
+}
+.select-button{
+  margin: 2px 0;
+  background-color: #f5f5f5;
+  border: none;
+  width: 100%;
+  padding: 5px 0;
+}
+.panel{
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
