Added Callover and Config Features.

--- a/src/client/stylesheets/partials/_buttons.scss
+++ b/src/client/stylesheets/partials/_buttons.scss
@@ -29,6 +29,10 @@
       &:hover{
         background-color: darken($colour, 10%);
       }
+      &:disabled{
+        cursor: not-allowed;
+        background-color: lighten($colour, 15%);
+      }
     }
   }
 }
